--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <ul>
             <li>
-              <span class="check"> &check; </span>
+              <span class="check done"> &check; </span>
                 Quartely Newsletter
               <span class="label editorial"> Editorial</span>
             </li>
@@ -40,19 +40,19 @@
 
           <ul>
             <li>
-              <span class="check"> &check; </span>
+              <span class="check done"> &check; </span>
               Recruiting blog post
               <span class="label editorial"> Editorial</span>
             </li>
 
             <li>
-              <span class="check"> &check; </span>
+              <span class="check done"> &check; </span>
               Mobile app launch
               <span class="label q1-goals"> Q1-Goals</span>
             </li>
 
             <li>
-              <span class="cross"> &cross; </span>
+              <span class="check undone"> &cross; </span>
               Interview John H.
               <span class="label recruiting"> Recruiting</span>
             </li>
@@ -68,7 +68,7 @@
 
           <ul>
             <li>
-              <span class="cross"> &check; </span>
+              <span class="check"> &check; </span>
               Schedule meeting with Alex
               <span class="label editorial"> Editorial</span>
             </li>
