--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </li>
           </ul>
 
+
           <h3 class="list-title">&#9660; Today</h3>
 
           <ul>
@@ -58,37 +59,37 @@
             </li>
 
             <li>
-              <span class="check"> &check; </span>
+              <span class="check done"> &check; </span>
               Summit upate to mobile storefronts
               <span class="label mobile"> Mobile</span>
             </li>
           </ul>
 
+
           <h3 class="list-title">&#9660; Upcoming</h3>
 
           <ul>
             <li>
-              <span class="check"> &check; </span>
+              <span class="check undone"> &check; </span>
               Schedule meeting with Alex
+            </li>
+
+            <li>
+              <span class="check done"> &check; </span>
+              Homepage refresh
+              <span class="label website"> Website</span>
+            </li>
+
+            <li>
+              <span class="check done"> &check; </span>
+              Onboard new Sales team members
+              <span class="label sales"> Sales</span>
+            </li>
+
+            <li>
+              <span class="check done"> &check; </span>
+              Review editorial calendar
               <span class="label editorial"> Editorial</span>
-            </li>
-
-            <li>
-              <span class="check"> &check; </span>
-              Summit upate to mobile storefronts
-              <span class="label mobile"> Mobile</span>
-            </li>
-
-            <li>
-              <span class="check"> &check; </span>
-              Summit upate to mobile storefronts
-              <span class="label mobile"> Mobile</span>
-            </li>
-
-            <li>
-              <span class="check"> &check; </span>
-              Summit upate to mobile storefronts
-              <span class="label mobile"> Mobile</span>
             </li>
           </ul>
         </div>
