--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <ul>
             <li>
-              <span class="check undone"> &check; </span>
+              <span class="check undone"> &cross; </span>
               Schedule meeting with Alex
             </li>
 
