--- a/index.html
+++ b/index.html
@@ -13,87 +13,95 @@
     />
   </head>
   <body>
-    <header>
-      <img src="./img/logo.png" alt="logo-toboolist" />
-      <h1>Toboolist</h1>
-    </header>
+    <div class="container">
+      <header>
+        <img src="./img/logo.png" alt="logo-toboolist" />
+        <h1>Toboolist</h1>
+      </header>
 
-    <main class="background-gray">
-      <div class="wrapper">
-        <div class="button-container">
-          <button class="button blue-button">Add task</button>
-          <button class="button white-button">Add Section</button>
+      <main class="background-gray">
+        <div class="wrapper">
+          <div class="button-container">
+            <button class="button blue-button">Add task</button>
+            <button class="button white-button">Add Section</button>
+          </div>
+
+          <div class="main-container-lists">
+            <ul class="main-list">
+              <li>
+                <h3 class="list-title">&#9660; New Task</h3>
+
+                <ul>
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Quartely Newsletter
+                    <span class="label editorial"> Editorial</span>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <h3 class="list-title">&#9660; Today</h3>
+
+                <ul>
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Recruiting blog post
+                    <span class="label editorial"> Editorial</span>
+                  </li>
+
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Mobile app launch
+                    <span class="label q1-goals"> Q1-Goals</span>
+                  </li>
+
+                  <li>
+                    <span class="check undone"> &cross; </span>
+                    Interview John H.
+                    <span class="label recruiting"> Recruiting</span>
+                  </li>
+
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Summit upate to mobile storefronts
+                    <span class="label mobile"> Mobile</span>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <h3 class="list-title">&#9660; Upcoming</h3>
+
+                <ul>
+                  <li>
+                    <span class="check undone"> &cross; </span>
+                    Schedule meeting with Alex
+                  </li>
+
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Homepage refresh
+                    <span class="label website"> Website</span>
+                  </li>
+
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Onboard new Sales team members
+                    <span class="label sales"> Sales</span>
+                  </li>
+
+                  <li>
+                    <span class="check done"> &check; </span>
+                    Review editorial calendar
+                    <span class="label editorial"> Editorial</span>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-
-        <div class="main-container-lists">
-          <h3 class="list-title">&#9660; New Task</h3>
-
-          <ul>
-            <li>
-              <span class="check done"> &check; </span>
-                Quartely Newsletter
-              <span class="label editorial"> Editorial</span>
-            </li>
-          </ul>
-
-
-          <h3 class="list-title">&#9660; Today</h3>
-
-          <ul>
-            <li>
-              <span class="check done"> &check; </span>
-              Recruiting blog post
-              <span class="label editorial"> Editorial</span>
-            </li>
-
-            <li>
-              <span class="check done"> &check; </span>
-              Mobile app launch
-              <span class="label q1-goals"> Q1-Goals</span>
-            </li>
-
-            <li>
-              <span class="check undone"> &cross; </span>
-              Interview John H.
-              <span class="label recruiting"> Recruiting</span>
-            </li>
-
-            <li>
-              <span class="check done"> &check; </span>
-              Summit upate to mobile storefronts
-              <span class="label mobile"> Mobile</span>
-            </li>
-          </ul>
-
-
-          <h3 class="list-title">&#9660; Upcoming</h3>
-
-          <ul>
-            <li>
-              <span class="check undone"> &cross; </span>
-              Schedule meeting with Alex
-            </li>
-
-            <li>
-              <span class="check done"> &check; </span>
-              Homepage refresh
-              <span class="label website"> Website</span>
-            </li>
-
-            <li>
-              <span class="check done"> &check; </span>
-              Onboard new Sales team members
-              <span class="label sales"> Sales</span>
-            </li>
-
-            <li>
-              <span class="check done"> &check; </span>
-              Review editorial calendar
-              <span class="label editorial"> Editorial</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
