--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <li>
                     <span class="check done"> &check; </span>
                     Quartely Newsletter
-                    <span class="label editorial"> Editorial</span>
+                    <span class="label bg-blue"> Editorial</span>
                   </li>
                 </ul>
               </li>
@@ -47,25 +47,25 @@
                   <li>
                     <span class="check done"> &check; </span>
                     Recruiting blog post
-                    <span class="label editorial"> Editorial</span>
+                    <span class="label bg-blue"> Editorial</span>
                   </li>
 
                   <li>
                     <span class="check done"> &check; </span>
                     Mobile app launch
-                    <span class="label q1-goals"> Q1-Goals</span>
+                    <span class="label bg-violet"> Q1-Goals</span>
                   </li>
 
                   <li>
                     <span class="check undone"> &cross; </span>
                     Interview John H.
-                    <span class="label recruiting"> Recruiting</span>
+                    <span class="label bg-green"> Recruiting</span>
                   </li>
 
                   <li>
                     <span class="check done"> &check; </span>
                     Summit upate to mobile storefronts
-                    <span class="label mobile"> Mobile</span>
+                    <span class="label bg-orange"> Mobile</span>
                   </li>
                 </ul>
               </li>
@@ -82,19 +82,19 @@
                   <li>
                     <span class="check done"> &check; </span>
                     Homepage refresh
-                    <span class="label website"> Website</span>
+                    <span class="label bg-pink"> Website</span>
                   </li>
 
                   <li>
                     <span class="check done"> &check; </span>
                     Onboard new Sales team members
-                    <span class="label sales"> Sales</span>
+                    <span class="label bg-olive-green"> Sales</span>
                   </li>
 
                   <li>
                     <span class="check done"> &check; </span>
                     Review editorial calendar
-                    <span class="label editorial"> Editorial</span>
+                    <span class="label bg-blue"> Editorial</span>
                   </li>
                 </ul>
               </li>
